<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".employer.PostJobForm">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        tools:context=".PostJobForm">

        <com.google.android.material.appbar.MaterialToolbar
            android:id="@+id/HeaderToolbar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="?attr/colorAccent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="4dp"
            android:layout_marginBottom="15dp"
            android:text="@string/addJob"
            android:textAlignment="center"
            android:textSize="34sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="@+id/HeaderToolbar"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <EditText
            android:id="@+id/jobPostingTitle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="15dp"
            android:layout_marginTop="12dp"
            android:layout_marginEnd="15dp"
            android:hint="@string/addJobTitle"
            android:imeOptions="actionNext"
            android:inputType="text"
            android:nextFocusDown="@+id/jobPostingDate"
            android:textSize="20sp"
            android:autofillHints=""
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/HeaderToolbar" />

        <EditText
            android:id="@+id/addJobDate"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="15dp"
            android:layout_marginTop="12dp"
            android:layout_marginEnd="15dp"
            android:ems="10"
            android:imeOptions="actionNext"
            android:nextFocusDown="@id/jobDurationSpinner"
            android:hint="@string/addJobStartDate"
            android:inputType="date"
            android:textSize="20sp"
            android:autofillHints=""
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/jobPostingTitle" />

        <TextView
            tools:ignore="UnusedIds"
            android:id="@+id/addJobDuration"
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            android:layout_marginStart="20dp"
            android:text="@string/addJobDuration"
            android:textSize="20sp"
            app:layout_constraintBottom_toBottomOf="@+id/jobDurationSpinner"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@+id/jobDurationSpinner" />

        <Spinner
            android:id="@+id/jobDurationSpinner"
            android:layout_width="165dp"
            android:layout_height="48dp"
            android:layout_marginStart="7dp"
            android:layout_marginTop="12dp"
            android:layout_marginEnd="15dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/addJobDate" />

        <TextView
            android:id="@+id/addJobUrgency"
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="7dp"
            android:text="@string/addJobUrgency"
            android:textSize="20sp"
            app:layout_constraintBottom_toBottomOf="@+id/jobUrgencySpinner"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@+id/jobUrgencySpinner" />

        <Spinner
            android:id="@+id/jobUrgencySpinner"
            android:layout_width="165dp"
            android:layout_height="48dp"
            android:layout_marginStart="7dp"
            android:layout_marginTop="12dp"
            android:layout_marginEnd="15dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/jobDurationSpinner" />

        <EditText
            android:id="@+id/addJobSalary"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="15dp"
            android:layout_marginTop="12dp"
            android:layout_marginEnd="15dp"
            android:ems="10"
            android:imeOptions="actionNext"
            android:nextFocusDown="@id/addJobAddress"
            android:hint="@string/addJobSalary"
            android:inputType="numberDecimal"
            android:textSize="20sp"
            android:autofillHints=""
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/addJobUrgency" />

        <EditText
            android:id="@+id/addJobAddress"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="15dp"
            android:layout_marginTop="12dp"
            android:layout_marginEnd="15dp"
            android:ems="10"
            android:imeOptions="actionNext"
            android:nextFocusDown="@id/addJobCity"
            android:hint="@string/address"
            android:inputType="textPostalAddress"
            android:textSize="20sp"
            android:autofillHints=""
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/addJobSalary" />

        <EditText
            android:id="@+id/addJobCity"
            android:layout_width="165dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="12dp"
            android:layout_marginEnd="15dp"
            android:ems="10"
            android:imeOptions="actionNext"
            android:nextFocusDown="@id/addJobDescription"
            android:hint="@string/addJobCity"
            android:inputType="text"
            android:textSize="20sp"
            android:autofillHints=""
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/addJobAddress" />

        <Spinner
            android:id="@+id/addJobProvince"
            android:layout_width="132dp"
            android:layout_height="48dp"
            android:layout_marginStart="15dp"
            android:layout_marginTop="12dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/addJobAddress" />

        <EditText
            android:id="@+id/addJobDescription"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="15dp"
            android:layout_marginTop="12dp"
            android:layout_marginEnd="15dp"
            android:layout_marginBottom="12dp"
            android:autofillHints=""
            android:ems="10"
            android:gravity="start|top"
            android:hint="@string/addJobDescription"
            android:inputType="textMultiLine"
            android:textSize="20sp"
            app:layout_constraintBottom_toTopOf="@+id/jobSubmitStatus"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="1.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/addJobCity" />

        <TextView
            android:id="@+id/jobSubmitStatus"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="12dp"
            android:layout_marginTop="22dp"
            android:layout_marginEnd="12dp"
            android:layout_marginBottom="12dp"
            android:text="@string/empty"
            app:layout_constraintBottom_toTopOf="@+id/addJobConfirmButton"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/addJobDescription" />

        <Button
            android:id="@+id/addJobConfirmButton"
            android:layout_width="wrap_content"
            android:layout_height="48dp"
            android:layout_marginTop="12dp"
            android:layout_marginBottom="30dp"
            android:text="@string/confirm"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/jobSubmitStatus"
            app:layout_constraintWidth_percent="0.75" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>