...
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/jobListingHeader" />

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/addJobButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:contentDescription="@string/addJob"
        android:src="@drawable/ic_add_foreground"
        app:backgroundTint="@color/light_green"
...
